commit on master

--- a/pics/Responsive Site P1.html
+++ b/pics/Responsive Site P1.html
@@ -1,21 +1,33 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
+<!-- saved from url=(0126)file:///Users/elijah/Library/Mobile%20Documents/com~apple~CloudDocs/Coding/Personal%20Projects/responsive-website-2/index.html -->
+<html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Responsive Site P1</title>
-    <link rel="stylesheet" href="">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="file:///Users/elijah/Library/Mobile%20Documents/com~apple~CloudDocs/Coding/Personal%20Projects/responsive-website-2/index.html">
+    <link rel="stylesheet" href="./Responsive Site P1_files/style.css">
 </head>
 
 <body>
-    <header class="bg-color1 text-center">
+    <header class="nav">
+        <div class="nav-title">
+            <h3><a href="file:///Users/elijah/Library/Mobile%20Documents/com~apple~CloudDocs/Coding/Personal%20Projects/responsive-website-2/index.html">Title</a></h3>
+        </div>
+        <div class="nav-buttons">
+            <ul>
+                <li><a href="file:///Users/elijah/Library/Mobile%20Documents/com~apple~CloudDocs/Coding/Personal%20Projects/responsive-website-2/index.html">Home</a></li>
+                <li><a href="file:///Users/elijah/Library/Mobile%20Documents/com~apple~CloudDocs/Coding/Personal%20Projects/responsive-website-2/index.html">About</a></li>
+                <li><a href="file:///Users/elijah/Library/Mobile%20Documents/com~apple~CloudDocs/Coding/Personal%20Projects/responsive-website-2/index.html">Careers</a></li>
+            </ul>
+        </div>
+    </header>
+    <section class="bg-color1 text-center">
         <div class="container container--narrow">
             <p>Lorem, ipsum dolor.</p>
             <h1>Responsive Layouts made simple with html</h1>
         </div>
-    </header>
+    </section>
 
     <section class="bg-color2">
         <div class="container">
@@ -39,7 +51,7 @@
                     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Facere sapiente suscipit illum recusandae similique? Quia!</p>
                 </div>
                 <div>
-                    <img src="pics/placeholder1.jpeg" alt="place holder image, no definition">
+                    <img src="./Responsive Site P1_files/placeholder1.jpeg" alt="place holder image, no definition">
                 </div>
             </div>
         </div>
@@ -48,7 +60,7 @@
         <div class="container">
             <div class="split">
                 <div>
-                    <img src="pics/placeholder2.jpeg" alt="place holder image, no definition">
+                    <img src="./Responsive Site P1_files/placeholder2.jpeg" alt="place holder image, no definition">
                 </div>
                 <div>
                     <h2>Delicately Custom Made </h2>
@@ -57,9 +69,6 @@
             </div>
         </div>
     </section>
-    <section>
-        <div class="footer-left"></div>
-        <div class="footer-right"></div>
-    </section>
-</body>
-</html>
+
+
+</body></html>
