--- a/index.html
+++ b/index.html
@@ -58,7 +58,9 @@
         </div>
     </section>
     <section>
-        <div class="footer-left"></div>
+        <div class="footer-left">
+            
+        </div>
         <div class="footer-right"></div>
     </section>
 </body>
