--- a/index.html
+++ b/index.html
@@ -10,12 +10,24 @@
 </head>
 
 <body>
-    <header class="bg-color1 text-center">
+    <header class="nav">
+        <div class="nav-title">
+            <a href="">Responsive Website</a>
+        </div>
+        <div class="nav-buttons">
+            <ul>
+                <li><a href="" class="linkani">Home</a></li>
+                <li><a href="" class="linkani">About</a></li>
+                <li><a href="" class="linkani">Careers</a></li>
+            </ul>
+        </div>
+    </header>
+    <section class="bg-color1 text-center">
         <div class="container container--narrow">
             <p>Lorem, ipsum dolor.</p>
             <h1>Responsive Layouts made simple with html</h1>
         </div>
-    </header>
+    </section>
 
     <section class="bg-color2">
         <div class="container">
@@ -56,12 +68,6 @@
                 </div>
             </div>
         </div>
-    </section>
-    <section>
-        <div class="footer-left">
-            
-        </div>
-        <div class="footer-right"></div>
     </section>
 </body>
 </html>
