commit on master

--- a/index.html
+++ b/index.html
@@ -12,32 +12,32 @@
 <body>
     <header class="nav">
         <div class="nav-title">
-            <a href="">Responsive Website</a>
+            <a href="">Techno</a>
         </div>
         <div class="nav-buttons">
             <ul>
-                <li><a href="" class="linkani">Home</a></li>
+                <li><a href="" class="linkani">Hours</a></li>
                 <li><a href="" class="linkani">About</a></li>
-                <li><a href="" class="linkani">Careers</a></li>
+                <li><a href="" class="linkani">Reserve</a></li>
             </ul>
         </div>
     </header>
     <section class="bg-color1 text-center">
         <div class="container container--narrow">
-            <p>Lorem, ipsum dolor.</p>
-            <h1>Responsive Layouts made simple with html</h1>
+            <p>Dance to that funky music, white boy.</p>
+            <h1>Techno, San Diegos Most Lit NightClub</h1>
         </div>
     </section>
 
     <section class="bg-color2">
         <div class="container">
-            <h2 class="text-center ">Great Design</h2>
+            <h2 class="text-center ">Best in Town</h2>
             <div class="split">
                 <div>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores vel totam illo deleniti, fuga reprehenderit quam nulla assumenda dolore voluptatum!</p>
+                    <p>We are San Diego's #1 nightclub! Including some the baddest bitches, a wall full of bottles and VIP lounges like no other! Reserve a spot in our VIP lounge or become a member to get priority access to our club and VIP lounges.</p>
                 </div>
                 <div>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis pariatur et exercitationem minima officiis, neque voluptates suscipit illo dolore voluptatum.</p>
+                    <p>Operation began in 2001 when former Frat Bro Quandale Dingle began listening to house music and going to clubs in his own Hometown of San Diego. Eventually after discovering his passion of bartending, he decided enough is enough and opened up the most badass night right in the heart of downtown San Diego!</p>
                 </div>
             </div>
         </div>
@@ -47,11 +47,11 @@
         <div class="container">
             <div class="split">
                 <div>
-                    <h2>My Custom Framework</h2>
-                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Facere sapiente suscipit illum recusandae similique? Quia!</p>
+                    <h2>Personal Party Bottle Service</h2>
+                    <p>Offering bottle service with open tabs to party groups. Look at our menu for some of our bottle options and delivery services.</p>
                 </div>
                 <div>
-                    <img src="pics/placeholder1.jpeg" alt="place holder image, no definition">
+                    <img src="pics/placeholder2.jpeg" alt="place holder image, no definition">
                 </div>
             </div>
         </div>
@@ -60,7 +60,7 @@
         <div class="container">
             <div class="split">
                 <div>
-                    <img src="pics/placeholder2.jpeg" alt="place holder image, no definition">
+                    <img src="pics/placeholder3.jpeg" alt="place holder image, no definition">
                 </div>
                 <div>
                     <h2>Delicately Custom Made </h2>
