commit on master

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Responsive Site P1</title>
+    <title>Responsive Site P3</title>
     <link rel="stylesheet" href="">
     <link rel="stylesheet" href="css/style.css">
 </head>
@@ -22,11 +22,12 @@
             </ul>
         </div>
     </header>
+
     <section class="bg-color1 text-center">
-        <div class="container container--narrow">
-            <p>Dance to that funky music, white boy.</p>
-            <h1>Techno, San Diegos Most Lit NightClub</h1>
-        </div>
+            <div class="container container--narrow">
+                <p class="bg-1-text">Dance to that funky music, white boy.</p>
+                <h1 class="bg-1-text">Techno, San Diegos Most Lit NightClub</h1>
+            </div>
     </section>
 
     <section class="bg-color2">
@@ -51,7 +52,7 @@
                     <p>Offering bottle service with open tabs to party groups. Look at our menu for some of our bottle options and delivery services.</p>
                 </div>
                 <div>
-                    <img src="pics/placeholder2.jpeg" alt="place holder image, no definition">
+                    <img src="pics/placeholder1.jpeg" alt="place holder image, no definition">
                 </div>
             </div>
         </div>
@@ -59,12 +60,13 @@
     <section class="bg-color4">
         <div class="container">
             <div class="split">
+
                 <div>
-                    <img src="pics/placeholder3.jpeg" alt="place holder image, no definition">
+                    <h2>Hardest Parties Here</h2>
+                    <p>No more lame underground nightclubs that are too crowded and have no free Wifi. Join us and get ready to post all the crazy shit that happens at Techno.</p>
                 </div>
                 <div>
-                    <h2>Delicately Custom Made </h2>
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Mollitia maxime dicta inventore, possimus iste in.</p>
+                    <img src="pics/placeholder3.jpeg" alt="place holder image, no definition">
                 </div>
             </div>
         </div>
